--- a/src/styles/_navbars.scss
+++ b/src/styles/_navbars.scss
@@ -3,7 +3,7 @@
 
 .navBar {
   position: fixed;
-  top: 163px;
+  top: 157px;
   bottom: 0;
   left: -100%;
   z-index: 2;
