--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -70,7 +70,7 @@ main {
    }
 
   .content {
-    margin-top: 163px;
+    margin-top: 157px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
